--- a/src/main/resources/templates/va2.html
+++ b/src/main/resources/templates/va2.html
@@ -3,6 +3,10 @@
 <html lang="en">
 <head>
   <style>
+    .tieude {
+      text-align: center;
+      color: coral;
+    }
     table, th, td {
       border: 1px solid black;
       border-collapse: collapse;
@@ -12,6 +16,7 @@
   <title>Title</title>
 </head>
 <body>
+<h2 class="tieude">Member details</h2>
 <table style="width:100%">
   <tr>
     <th>ID</th>
